# domino

./: .clang-format  .clang-tidy  .gitignore  BUILD.bazel  CMakeLists.txt  README.md  xmake.lua
.github/workflows/: ci.yml  cmake.yml
benchmark/: CMakeLists.txt
benchmark/support/: CMakeLists.txt  Casting.bm.cc
doc/util/: Readme.md
docs/meta/: Readme.md
docs/script/: spec.md
docs/support/: FileSystem.md
docs/util/: IntrusiveRefCntPtr.md  Readme.md
examples/: CMakeLists.txt  xmake.lua
examples/tinyjson/: CMakeLists.txt  json_ast.h  parser.h  tinyjson.example.cc
include/domino/lazy/detail/: BasicIteratorView.hpp  CStringIterator.hpp  LazyTools.hpp
include/domino/meta/detail/: append.hpp  fold.hpp  integral.hpp  min_element.hpp  utility.hpp  void.hpp
include/domino/rpc/: Configuration.h  DominoRpc.h
include/domino/rpc/concurrency/: Mutex.h
include/domino/rpc/transport/: ServerSocket.h  ServerTransport.h  Socket.h  SocketDefine.h  Transport.h  VirtualTransport.h
include/domino/script/: AST.h  Dialect.h  Lexer.h  MLIRCodeGen.h  Parser.h
include/domino/stacktrace/: Stacktrace.h
include/domino/support/: Casting.h  Chrono.h  Duration.h  Endian.h  Errc.h  Error.h  ErrorOr.h  Expected.h  FileSystem.h  Format.h  FormatCommon.h  FormatProviders.h  FormatVariadic.h  FormatVariadicDetails.h  HashBuilder.h  MathExtras.h  NativeFormatting.h  Process.h  Program.h  Signals.h  SwapByteOrder.h  TypeSwitch.h  TypeTraits.h  list.h  pointer_like_type_traits.h  raw_ostream.h
include/domino/support/filesystem/: Errno.h  Path.h  UniqueID.h  Unix.h
include/domino/support/hash/: MD5.h  SHA1.h  SHA256.h
include/domino/util/: AlignOf.h  Any.h  Array.h  ArrayRef.h  Cpplisp.h  DenseMapInfo.h  EditDistance.h  Hashing.h  IfConstexpr.h  IntrusiveRefCntPtr.h  Iterator.h  IteratorRange.h  Json.h  Macros.h  PointerIntPair.h  STLExtras.h  ScopeExit.h  SmallString.h  SmallVector.h  StringExtras.h  StringRef.h  StringSwitch.h  ToString.h  Twine.h  TypeList.h  bit.h  small_vector.h  stringref.h
lib/http/: UriParser.cc  uri_parser.cc
lib/rpc/concurrency/: Mutex.cc
lib/rpc/transport/: ServerSocket.cc  Socket.cc
lib/script/: AST.cc  Dialect.cc  MLIRCodeGen.cc
lib/support/: Error.cc  FormatVariadic.cc  NativeFormatting.cc  Process.cc  Process.inc  Program.cc  raw_ostream.cc
lib/support/filesystem/: Errno.cc  Path.cc  Path.inc
lib/support/hash/: MD5.cc  SHA1.cc  SHA256.cc
lib/util/: Hashing.cc  StringExtras.cc  StringRef.cc  Twine.cc
src/: list.h  type_traits.h  uri_parser.cc  xmake.lua
src/domino/http/: uri_parser.h  xmake.lua
src/domino/meta/: integer_sequence.hpp  list.hpp
src/domino/meta/detail/: fold.hpp  front.hpp  is_list.hpp  list.hpp  plus.hpp  rename.hpp
src/domino/rpc/: exception.h
src/domino/support/: casting.h  xmake.lua
src/domino/util/: logging.h  noncopyable.h  small_vector.cc  small_vector.h  to_string.h  xmake.lua
src/support/: type_traits.h
src/util/: small_vector.h
test/: small_vector_test.cc  type_traits_test.cc  uri_parser_test.cc  xmake.lua
unittests/: CMakeLists.txt  test.lua  xmake.lua
unittests/http/: CMakeLists.txt  UriParserTest.cc  uri_parser_test.cc  xmake.lua
unittests/meta/: CMakeLists.txt  append.t.cc  fold.t.cc  integer_sequence_test.cc  list_c_test.cc  meta_quote.t.cc  xmake.lua
unittests/rpc/concurrency/: Mutex.t.cc
unittests/script/: ASTDumpDriver.t.cc  CMakeLists.txt  Lex.t.cc  MLIRCodegen.t.cc  ast.do  driver.t.cc
unittests/script/test/: ast.do  codegen.do
unittests/stacktrace/: CMakeLists.txt  Stacktrace.t.cc
unittests/support/: CMakeLists.txt  Casting.t.cc  Chrono.t.cc  Endian.t.cc  Errno.t.cc  ErrorOr.t.cc  HashBuilder.t.cc  IfConstexpr.t.cc  MD5.t.cc  MathExtras.t.cc  SHA256.t.cc  SwapByteOrder.t.cc  TypeSwitch.t.cc  TypeTraits.t.cc  TypeTraitsTest.cc  UniqueID.t.cc  type_traits_test.cc  xmake.lua
unittests/util/: AlignOf.t.cc  Any.t.cc  Array.t.cc  ArrayRef.t.cc  CMakeLists.txt  Cpplisp.t.cc  Hashing.t.cc  IfConstexpr.t.cc  IntrusiveRefCntPtr.t.cc  JsonTest.cc  LoggingTest.cc  MoveOnly.h  PointerIntPairTest.cc  STLExtras.t.cc  STLExtrasTest.cc  ScopeExit.t.cc  SmallString.t.cc  SmallVectorTest.cc  StringRef.t.cc  StringRefTest.cc  StringSwitch.t.cc  ToString.t.cc  TypeList.t.cc  bit.t.cc  logging_test.cc  small_vector_test.cc  stringref_test.cc  to_string_test.cc  xmake.lua
